--- a/news.html
+++ b/news.html
@@ -31,40 +31,9 @@
     </div>
     <div class="wrapper_2col">
     <div class="leftcol">
-      <p class="informationen">
-        Jag valde att lägga till en sökmotor (som inte fungerar) för att göra det enklare att navigera på sidan om den skulle vara riktig. Jag lade till en animation på knapparna, så när man hoverar över dom, ändrar dom färg för att visa användaren att det är den knappen dem håller över. Jag gjorde även så att när man är inne på en viss sida, så har den knappen en annan färg. Detta för att göra det klart vilken sida man är inne på. 
-
-        Jag lade till en media query för att ändra menyns uppbyggnad, beroende på om man är på en enhet med en bredd på skärmen som är under 600px. När man är över 600px, återgår menyn till dennes normala form.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a augue id
-        leo scelerisque hendrerit non non dui. Integer condimentum quam sed tellus
-        ultricies a aliquam elit ornare. Curabitur ac libero et sapien feugiat
-        porta vitae sed lorem. In faucibus imperdiet neque, sit amet accumsan
-        ante elementum tincidunt. Proin tincidunt massa at leo tincidunt consectetur.
-        Sed consectetur ornare libero a sagittis. Pellentesque aliquet ipsum ante.
-        Sed eget tellus dui, eget sodales lectus.
-      </p>
-    </div><!--leftcol slutar-->
-    <div class="rightcol">
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Curabitur id erat
-        et elit blandit lobortis a a neque. Fusce lacus nisi, vulputate quis vulputate
-        vel, aliquam vitae libero. Sed congue ligula quis turpis tincidunt ut
-        ultrices ante feugiat. Sed semper tortor fermentum ligula fringilla tristique.
-        Mauris lacinia venenatis commodo. Curabitur scelerisque pharetra facilisis.
-        Donec et iaculis nunc. Curabitur rhoncus iaculis diam, rutrum faucibus
-        magna cursus in. Vestibulum eu consectetur magna.
-      </p>
-      <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a augue id
-        leo scelerisque hendrerit non non dui. Integer condimentum quam sed tellus
-        ultricies a aliquam elit ornare. Curabitur ac libero et sapien feugiat
-        porta vitae sed lorem. In faucibus imperdiet neque, sit amet accumsan
-        ante elementum tincidunt. Proin tincidunt massa at leo tincidunt consectetur.
-        Sed consectetur ornare libero a sagittis. Pellentesque aliquet ipsum ante.
-        Sed eget tellus dui, eget sodales lectus.
-      </p>
+        <img src="bilder/djur.jpg">
+        <img src="bilder/djur2.jpg">
+        <img src="bilder/djur3.jpg">
       <div class="push"></div>
     </div><!--rightcol slutar-->
     </div><!--wrapper2col slutar-->
