--- a/news.html
+++ b/news.html
@@ -31,9 +31,11 @@
     </div>
     <div class="wrapper_2col">
     <div class="leftcol">
-        <img class="djurbilder" src="bilder/djur.jpg">
-        <img class="djurbilder" src="bilder/djur2.jpg">
-        <img class="djurbilder" src="bilder/djur3.jpg">
+        <div class="djurbilder">
+            <img src="bilder/djur.jpg">
+            <img src="bilder/djur2.jpg">
+            <img src="bilder/djur3.jpg">
+        </div>
       <div class="push"></div>
     </div><!--rightcol slutar-->
     </div><!--wrapper2col slutar-->
