--- a/news.html
+++ b/news.html
@@ -1,47 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>Exempel 1 navigation bar</title>
-    <meta charset = "utf-8" />
-    <link href = "css/navigation.css" rel="stylesheet" type="text/css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
-</head>
-<body>
-<!--wrapper börjar-->
-    <div class="wrapper">
-    <div class="mainmenu-whole">
-    <header class="header">
-        <h1>Min första hemsida</h1>
-    </header>
-    <header>
-        <div class="mainmenu">
-            <a href="index.html">Hem</a>
-            <a id="current" href="news.html">Nyheter</a>
-            <a href="contacts.html">Kontakt</a>
-            <a href="about.html">Om</a>
-            <div class="sokruta">
-              <form>
-                <input class="search" type="text" placeholder="Skriv här för att söka...">
-                <button class="search-button" type="submit">Sök</button>
-              </form>
-            </div>
-        </div>
-    </header>
-    </div>
-    <div class="wrapper_2col">
-    <div class="leftcol">
-        <div class="djurbilder">
-            <img src="bilder/djur.jpg">
-            <img src="bilder/djur2.jpg">
-            <img src="bilder/djur3.jpg">
-        </div>
-      <div class="push"></div>
-    </div><!--rightcol slutar-->
-    </div><!--wrapper2col slutar-->
-    <footer class="footer">
-      <p>All rights reserved - &#169; Copyright</p>
-    </footer>
-    </div><!--wrapper slutar-->
-  </body>
-</html>
+<!DOCTYPE html><html><head><title>Exempel 1 navigation bar</title><meta charset = "utf-8" /><link href = "css/navigation.css" rel="stylesheet" type="text/css" /><link rel="preconnect" href="https://fonts.gstatic.com"><link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"></head><body><div class="wrapper"><div class="mainmenu-whole"> <header class="header"><h1>Min första hemsida</h1> </header> <header><div class="mainmenu"> <a href="index.html">Hem</a> <a id="current" href="news.html">Nyheter</a> <a href="contacts.html">Kontakt</a> <a href="about.html">Om</a><div class="sokruta"><form> <input class="search" type="text" placeholder="Skriv här för att söka..."> <button class="search-button" type="submit">Sök</button></form></div></div> </header></div><div class="wrapper_2col"><div class="leftcol"><div class="djurbilder"> <img src="bilder/djur.jpg"> <img src="bilder/djur2.jpg"> <img src="bilder/djur3.jpg"></div><div class="push"></div></div></div> <footer class="footer"><p>All rights reserved - &#169; Copyright</p> </footer></div></body></html>
