--- a/about.html
+++ b/about.html
@@ -43,9 +43,9 @@
       <!--Ordered list start-->
       <ol class="ordered">
         <li>Wake up</li>
-        <li>Make coffee</li>
-        <li>Drink coffee</li>
-        <li>Make more coffee</li>
+        <li>Go to sleep</li>
+        <li>Sleep</li>
+        <li>Sleep more</li>
       </ol>
       <!--Ordered list end-->
       <ul class="unordered">
@@ -57,6 +57,14 @@
           </ul>
         <li>Cabbage</li>
       </ul>
+
+      <ol class="custom-box-list">
+        <li>This is the first item</li>
+        <li>This is the second item</li>
+        <li>This is the third item</li>
+        <li>This is the fourth item</li>
+        <li>This is the fifth item</li>
+      </ol>
       <!--Table start-->
       
       <!--Table end-->
