--- a/about.html
+++ b/about.html
@@ -65,8 +65,20 @@
         <li>This is the fourth item</li>
         <li>This is the fifth item</li>
       </ol>
+
+      <ul class="list-image">
+        <li> Add text here </li>
+        <li> Add text here </li>
+        <li> Add text here </li>  
+      </ul>
       <!--Table start-->
-      
+      <h2>Some popular sites</h2>
+      <p>Click on a name to go to that page:</p>
+      <ul class="popular-sites">
+        <li><a href="https://www.spotify.com/us/">Spotify</a></li>
+        <li><a href="https://www.aftonbladet.se/">Aftonbladet</a></li>
+        <li><a href="https://www.ikea.com/se/sv/">IKEA</a></li>
+      </ul>
       <!--Table end-->
     </div><!--wrapper2col slutar-->
     <footer class="footer">
