--- a/about.html
+++ b/about.html
@@ -80,6 +80,37 @@
         <li><a href="https://www.ikea.com/se/sv/">IKEA</a></li>
       </ul>
       <!--Table end-->
+
+      <table class="table-simple">
+        <caption>Members and their ages</caption>
+        <tr>
+             <th>First Name</th>
+             <th>Last Name</th>
+             <th>Age</th>
+         </tr>
+         <tr>
+             <td>Astrid</td>
+             <td>Andersson</td>
+             <td>51</td>
+         </tr>
+         <tr>
+             <td>Elias</td>
+             <td>Eriksson</td>
+             <td>93</td>
+         </tr>
+         <tr>
+             <td>Oscar</td>
+             <td>Johansson</td>
+             <td>82</td>
+         </tr>
+         <tr>
+          <td>Anna</td>
+          <td>Karlsson</td>
+          <td>35</td>
+      </tr>
+     </table>
+     <br>
+ 
     </div><!--wrapper2col slutar-->
     <footer class="footer">
       <p>All rights reserved - &#169; Copyright</p>
