--- a/about.html
+++ b/about.html
@@ -110,7 +110,68 @@
       </tr>
      </table>
      <br>
- 
+     <h3>This table shows an example of colspan:</h3> 
+     <table>
+            <tr>
+                <th>Name</th>
+                <th colspan="2">Phone Number</th>
+            </tr>
+            <tr>
+                <td>Eva Eriksson</td>
+                <td>072 55 77 854</td>
+                <td>072 55 77 855</td>
+            </tr>
+     </table>
+     <br>
+     <h3>This table shows an example of rowspan:</h3> 
+<table>
+        <tr>
+            <th>First Name:</th>
+            <td>Eva Eriksson </td>
+        </tr>
+        <tr>
+            <th rowspan="2">Phone Number:</th>
+            <td>072 55 77 854</td>
+        </tr>
+        <tr>
+            <td>072 55 77 855</td>
+        </tr>
+</table>
+<br>
+<h3>A table with CSS:</h3> 
+<table class="head-body-foot">
+  <thead>
+    <tr>
+      <th>Year</th>
+      <th>Profit</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr>
+      <td>2017</td>
+      <td>€1000</td>
+    </tr>
+    <tr>
+      <td>2018</td>
+      <td>€1500</td>
+    </tr>
+    <tr>
+      <td>2019</td>
+      <td>€2000</td>
+    </tr>
+    <tr>
+      <td>2020</td>
+      <td>€1650</td>
+    </tr>
+  </tbody>
+  <tfoot>
+    <tr>
+      <td colspan="2">2019 was better than 2020</td>
+    </tr>
+  </tfoot>
+</table>
+<br>
+
     </div><!--wrapper2col slutar-->
     <footer class="footer">
       <p>All rights reserved - &#169; Copyright</p>
