--- a/about.html
+++ b/about.html
@@ -172,6 +172,113 @@
 </table>
 <br>
 
+<!-- Table with scrollbar -->   
+<h3>A Table with Scrollbar:</h3>
+    <div class="scroll_bar">
+    <table class="many-columns">
+      <thead>
+        <tr>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+          <th>Header</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr class="bottom-tr">
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+        </tr>
+        <tr class="bottom-tr">
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+          <td>Cell</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+    <br>
+
+    <table class="table-image">
+      <tr>
+        <th colspan="4">Car Models 2021</th>
+      </tr>
+      <tr>
+        <th>Model</th>
+        <th>Origin</th>
+        <th>Image</th>
+        <th>Cost</th>
+      </tr>
+      <tr>
+        <td>Tesla Model S Long Range Plus 2021</td>
+        <td>United States</td>
+        <td><img src="tesla.jpg" alt="Tesla car 2021" height=200 width=400></td>
+        <td>Starting at $81,190</td>
+      </tr>
+    </table>
+    <br>
+
+    <table class="GeneratedTable">
+      <thead>
+        <tr>
+          <th colspan="4">Dog</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td colspan="2" rowspan="2"><img src="shiba.jpg" alt="Cute shiba dog" height=300 width=400></td>
+          <td><span>&#60;</span>-- Cute</td>
+          <td>Dog</td>
+        </tr>
+        <tr>
+          <td><span>&#60;</span>-- Cute</td>
+          <td>Dog</td>
+        </tr>
+        <tr>
+          <td><span>&#8593;</span> Cute dog</td>
+          <td><span>&#8593;</span> Cute dog</td>
+          <td>:)</td>
+          <td>:)</td>
+        </tr>
+      </tbody>
+    </table>
+
     </div><!--wrapper2col slutar-->
     <footer class="footer">
       <p>All rights reserved - &#169; Copyright</p>
