--- a/about.html
+++ b/about.html
@@ -5,6 +5,7 @@
     <meta charset = "utf-8" />
     <link href = "css/navigation.css" rel="stylesheet" type="text/css" />
     <link href = "css/lists-tables.css" rel="stylesheet" type="text/css" />
+    <link href="css/slider.css" rel="stylesheet" type="text/css" />
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
@@ -278,11 +279,23 @@
         </tr>
       </tbody>
     </table>
+    <br>
+    <div class="div-content">
+      <img class="mySlides" src="img1.jpg" style="width:100%">
+      <img class="mySlides" src="img2.jpg" style="width:100%">
+      <img class="mySlides" src="img3.jpg" style="width:100%">
+      <img class="mySlides" src="img4.jpg" style="width:100%">
+      <img class="mySlides" src="shiba.jpg" style="width:100%">
+
+      <button class="slider-button display-left" onclick="changeImage(-1)">&#129056;</button>
+      <button class="slider-button display-right" onclick="changeImage(1)">&#129058;</button>
+</div>
 
     </div><!--wrapper2col slutar-->
     <footer class="footer">
       <p>All rights reserved - &#169; Copyright</p>
     </footer>
     </div><!--wrapper slutar-->
+    <script src="image-slider.js"></script> 
   </body>
 </html>
