--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <a href="about.html">Om</a>
             <div class="sokruta">
               <form>
-                <input class="search" type="text" placeholder="Skriv här för att söka...">
+                <input class="search" type="text" aria-label="search" placeholder="Skriv här för att söka...">
                 <button class="search-button" type="submit">Sök</button>
               </form>
             </div>
